--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-1. produce movie of simulations
+1. produce movie of simulations - **DONE** 8 March 2020
 2. visualize missing residues
 3. insert missing residues into structure before simulating
